# Pathtracer

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  pathRT.rgen
lib/assimp/: assimp.lib
lib/glm/: glm_static.lib
shaders/: AO.rchit  AO.rgen  AO.rmiss  ambientOcc.rchit  compile.bat  fragshader.spv  lightShader.frag  lightShader.vert  pathRT.rchit  pathRT.rchit.spv  pathRT.rgen  pathRT.rgen.spv  pathRT.rmiss  pathRT.rmiss.spv  pathRTBounce.rchit  pathRTBounce.rmiss  pathRTShadow.rmiss  pathRTShadow.rmiss.spv  pathRTpostprocess.comp  simple.frag  simple.frag.spv  simple.glsl  simple.vert  simple.vert.spv  utils.comp  vertshader.spv
shaders/spirv/: AO.rchit.spv  AO.rgen.spv  AO.rmiss.spv  fragshader.spv  lightShader.frag.spv  lightShader.vert.spv  pathRT.rchit.spv  pathRT.rgen.spv  pathRT.rmiss.spv  pathRTBounce.rchit.spv  pathRTBounce.rmiss.spv  pathRTpostProcess.comp.spv  vertshader.spv
src/: AreaLight.cpp  AreaLight.h  CMakeLists.txt  CameraControls.cpp  CameraControls.h  ImGuiOverlay.cpp  ImGuiOverlay.h  Mesh.h  Model.cpp  Model.h  implementations.cpp  main.cpp  rtutils.cpp  rtutils.h  sobolSampler.cpp  sobolSampler.h  vkContext.cpp  vkContext.h  vkDebugLayers.cpp  vkDebugLayers.h  vkLoadRTfunctions.cpp  vkRTX_setup.cpp  vkRTX_setup.h  vkRT_BLAS.cpp  vkRT_BLAS.h  vkRT_DescriptorSets.cpp  vkRT_DescriptorSets.h  vkRT_Import.cpp  vkRT_Pipeline.cpp  vkRT_Pipeline.h  vkRT_SBT.cpp  vkRT_SBT.h  vkRT_TLAS.cpp  vkRT_TLAS.h  vkRenderer.cpp  vkRenderer.h  vkTools.cpp  vkTools.h  vkWindow.cpp  vkWindow.h
